@startuml
'https://plantuml.com/class-diagram





'abstract class AbstractList
'abstract AbstractCollection
'interface List
'interface Collection
'
'List <|-- AbstractList
'Collection <|-- AbstractCollection
'
'Collection <|- List
'AbstractCollection <|- AbstractList
'AbstractList <|-- ArrayList
'
'class ArrayList {
'Object[] elementData
'size()
'}
'
'enum TimeUnit {
'DAYS
'HOURS
'MINUTES
'}

class Sheep {
    - String name
    - Int age
    - String color

    + String getName()
    + Int getAge()
    + String getColor()
}

class Client

Sheep <.. Client

@enduml